--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -13,7 +13,7 @@
     top: 0;
     left: 0;
     bottom: 0;
-    background: #fff;
+    background: #000;
     width: 90%;
     max-width: 250px;
     display: flex;
@@ -48,17 +48,23 @@
   }
   nav ul li a {
     padding: 10px 20px;
-    color: #000000;
+    color: #ffffff;
     border-bottom: unset;
+    font-family: "Praktika";
   }
   nav ul li a:hover,
   nav ul li.active a,
   nav ul li a:focus {
-    color: #000;
+    color: #ed390a;
     border-bottom: unset;
+    font-weight: 800;
   }
+  nav ul li a:hover, nav ul li a.active, nav ul li a:focus {
+    color: #ed390a;
+    font-weight: 800;
+}
   nav ul li + li {
-    border-top: 1px solid #eee;
+    border-top: 1px solid #4a4a4a;
   }
   nav ul li a:before {
     background-color: #fce824;
@@ -132,7 +138,7 @@
         margin:15px 0 0 0;
     }
     .about-section {
-        padding: 30px 0 0;
+        padding: 40px 0 0;
     }
     .top-heading {
         margin-bottom: 30px;
@@ -159,7 +165,7 @@
     }
 
     .sumrcamp-section {
-        padding: 30px 0 0 0;
+        padding: 40px 0 0 0;
     }
     .sumrcamp-list ul li{
         width: 100%;
@@ -172,7 +178,7 @@
     }
 
     .sponsor-section {
-        padding-bottom: 40px;
+        /* padding-bottom: 40px; */
     }
     .sponsorship-btns {
         gap: 10px 14px;
@@ -242,4 +248,26 @@
   .bnr-descrp {
     text-align: start;
   }
+
+  .teams-flex {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+.teams-section {
+  padding: 40px 0;
+}
+.athelete-img {
+  width: 100%;
+  height: 213px;
+}
+.player-numbr {
+  font-size: 16px;
+  line-height: 24px;
+}
+.teamsname-wthbg p {
+  font-size: 16px;
+  line-height: 24px;
+}
 }
