--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,7 +360,7 @@ nav ul li a.active:before {
   top: 10px;
   left: 100%;
   width: 40px;
-  background: #fff;
+  background: #000000;
   padding: 20px 10px;
   box-shadow: 4px 0 5px rgb(0 0 0 / 10%);
   border-radius: 0 5px 5px 0;
@@ -380,7 +380,7 @@ nav ul li a.active:before {
   right: 0;
   height: 2px;
   top: 0;
-  background: #000000;
+  background: #ffffff;
 }
 
 .close-menu span:after {
@@ -431,12 +431,13 @@ nav ul li a.active:before {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgb(0 0 0 / 13%);
+  background: rgb(91 91 91 / 34%);
   z-index: 998;
   transition: all 300ms;
   opacity: 0;
   visibility: hidden;
   height: 100vh;
+  backdrop-filter: blur(5px);
 }
 
 .menu-open .overlay {
@@ -716,7 +717,7 @@ nav ul li a.active:before {
   width: 100%;
 }
 .sponsor-section {
-  padding-bottom: 70px;
+  /* padding-bottom: 70px; */
 }
 .sponsorship-btns {
   display: flex;
@@ -931,6 +932,96 @@ footer {
 }
 .accordian-main .accordian-head h3 {
   font-size: 18px;
+}
+
+.teams-section{
+  padding: 70px 0;
+}
+.teamsname-wthbg {
+  height: 252px;
+  background: rgb(255 228 210);
+  border: 12px;
+  overflow: hidden;
+  position: relative;
+}
+
+.teamsname-wthbg span {
+  display: block;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.yuthacdmy-bg{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgb(255 255 255 / 10%);
+  padding: 10px;
+  backdrop-filter: blur(9px);
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  overflow: hidden;
+}
+.teamsname-wthbg p {
+  text-align: center;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 26px;
+}
+
+.teams-list ul li+li {
+  margin-top: 15px;
+}
+.teams-flex {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.teams-inner-flex {
+  flex: 48%;
+}
+
+.teamsbg-small {
+  height: 214px;
+  background: rgb(255 228 210);
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.teamsbg-small span {
+  display: block;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.teams-flex+.teams-flex {
+  margin-top: 15px;
+}
+.baset-btn {
+  margin-bottom: 25px;
+}
+
+.teamsbg-playrlist ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+}
+
+.player-numbr {
+  background: #ffefe3;
+  color: #ED390A;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 28px;
+  padding: 5px 10px 5px 10px;
+  text-align: center;
+  border-radius: 2px;
 }
 @keyframes topToBottom {
   from {
