--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,7 +323,7 @@ nav ul li a {
   display: block;
   color: #fff;
   font-size: 14px;
-  text-transform: capitalize;
+  text-transform: uppercase;
   padding: 24px 10px;
   letter-spacing: 0.5px;
   font-weight: 700;
