--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -789,7 +789,7 @@ footer {
   color: #fff;
   font-size: 14px;
   font-weight: 500;
-  line-height: 1.4;
+  line-height: 18px;
   position: relative;
   cursor: pointer;
   padding: 3px 0px 3px 26px;
@@ -806,6 +806,13 @@ footer {
 }
 .social-links a:hover {
   color: #000;
+}
+.social-links a:hover span svg path {
+  fill: #000000;
+}
+.social-links ul li:nth-child(3) a:hover span svg path, .social-links ul li:nth-child(4) a:hover span svg path{
+  fill: unset;
+  stroke: #000000;
 }
 .ftr-btm {
   border-top: 1px solid rgb(255 255 255 / 34%);
